# happychartsv2

./: .gitignore  Cargo.toml  README.md  prompt.txt
src/: backtest.rs  lib.rs  main.rs  prompt_builder.rs
